--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 }
 
-#newEntryName{
+.newName{
 	font-size:190%;
 }
 
@@ -43,4 +43,14 @@ h3{
 	-webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
 	-moz-box-shadow:    3px 3px 5px 0px rgba(50, 50, 50, 0.75);
 	box-shadow:         3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+}
+
+#timeDiv{
+	margin:1%;
+}
+
+.entryDescription{
+	padding:1%;
+	background-color: #BF7BE8;
+	min-height:200px;
 }
