--- a/style.css
+++ b/style.css
@@ -8,10 +8,35 @@ body{
        max-height: 70px;
 }
 
+#settingsIMG{
+    min-height:60px;
+    max-height: 70px;
+	vertical-align:top;
+}
+
+#settings{
+	position:absolute;
+	right:0px;
+}
+
+h1 {
+	padding-left:1%;
+	font-size:400%;
+	display:inline;
+}
+
 #newEntry{
 	background-color: #107FCC;
 	margin:1%;
+}
 
+#newEntryName{
+	display:inline;
+}
+
+.createEntry {
+	position:absolute;
+	right:0px;
 }
 
 .newName{
@@ -33,8 +58,25 @@ body{
 	font-weight:300%;
 }
 
+.checksImages{
+    min-height:20px;
+    max-height: 30px;
+	display:inline;
+	vertical-align:bottom;
+}
+
 h3{
+	display:inline;
 	margin: 0px;
+}
+
+.deleteEntryImages{
+    min-height:20px;
+    max-height: 30px;
+	display:inline;
+	vertical-align:bottom;
+	position:absolute;
+	right:0px;
 }
 
 #listBox{
