--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@ body{
 }
 
 #banner{
-	background-color: #B26349;
+	background-color: #ADD5F7;
        min-height:60px;
        max-height: 90px;
 }
 
 #settingsIMG{
-    min-height:60px;
-    max-height: 70px;
+    min-height:50px;
+    max-height: 60px;
 	vertical-align:top;
 }
 
@@ -22,12 +22,12 @@ body{
 
 h1 {
 	padding-left:1%;
-	font-size:400%;
+	font-size:340%;
 	display:inline;
 }
 
 #newEntry{
-	background-color: #107FCC;
+	background-color: #10CC5B;
 	margin:1%;
 }
 
@@ -36,8 +36,13 @@ h1 {
 }
 
 .createEntry {
+
 	position:absolute;
 	right:0px;
+	
+}
+.creatEntry:hover{
+	cursor:pointer;
 }
 
 .newName{
@@ -51,7 +56,7 @@ h1 {
 	padding-bottom:1%;
 }
 
-.entries:hover{
+.entries h3:hover{
 	cursor:pointer;
 }
 
